--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,23 @@
-*{
-    margin: 0;
-    padding: 0;
+html {
+    /* border-box box model allows us to add padding and border to our elements without increasing their size */
     box-sizing: border-box;
+    /* font-family: Arial, Helvetica, sans-serif; */
+    /* font-weight: 600; */
+    /* font-size: 10px; */
+    /* color: black; */
+    /* text-shadow: 0 2px 0 rgba(122, 59, 59, 0.07); */
+  }
+
+*,
+*:before,
+*:after{
+    /* margin: 0;
+    padding: 0; */
+    box-sizing: inherit;
 }
 
 body{
-    display: flexbox;
+    /* display: flexbox; */
 }
 
 /* header section start */
@@ -29,7 +41,7 @@ body{
 }
 
 .header nav {
-    float: right;
+    /* float: right; */
     margin: 7px 0;
     display: flex;
     flex-wrap: wrap;
@@ -55,21 +67,23 @@ li a:hover {
 }
 
 .About-Me {
+    display: flex;
     margin: 0px auto 0px auto;
     overflow: auto;
 }
 
 .about-section img {
-    width: 15%;
+    width: 20%;
     float: right;
     /* background-size: cover; */
 }
 
 .about-section p {
-    /* display: flex; */
-    padding: 0px;
-    float: left;
-    width: 100%;
+    display: flex;
+    /* padding: 0px; */
+    /* float: left; */
+    /* width: 100%; */
+    justify-content: center;
 }
 /* end about me section */
 
@@ -85,25 +99,49 @@ h2{
     flex-wrap: wrap;
 }
 
-/* work section begin */
-#work-grid-container {
-    max-width: 940px;
-    margin: 0 auto;
+/* grid section begin */
+#grid-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 100px);
-    grid-gap; 10px;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-gap: 20px;
+    grid-auto-flow: dense;
 }
 
-.work-grid-item {
-    width: 80%;
-    height: auto;
-    background-color: orange;
-    border: solid;
-    color: black;
+.grid-item {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
+    border: 5px solid rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    font-size: 35px;
+    background-color: aquamarine;
 }
-/* work section end */
+
+.grid-item:nth-child(3n) {
+    grid-column: span 3;
+    grid-row: span 2;
+  }
+
+  .box-1 {
+    grid-column: 2 / span 3;
+    grid-row: 2 / span 4;
+  }
+/* grid section end */
+
+.work {
+    display: flex;
+}
+
+.contact {
+    display: flex; 
+    /* padding: 10px; */
+    /* float: left; */
+    justify-content: flex-start;
+}
+
+h2 {
+    display: flex;
+    color: ivory;
+    justify-content: flex-start;
+}
