--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,14 @@
-html {
-    /* border-box box model allows us to add padding and border to our elements without increasing their size */
-    box-sizing: border-box;
-    /* font-family: Arial, Helvetica, sans-serif; */
-    /* font-weight: 600; */
-    /* font-size: 10px; */
-    /* color: black; */
-    /* text-shadow: 0 2px 0 rgba(122, 59, 59, 0.07); */
-  }
 
 *,
 *:before,
-*:after{
+*:after {
     /* margin: 0;
     padding: 0; */
     box-sizing: inherit;
 }
 
-body{
-    /* display: flexbox; */
+body {
+    display: flexbox;
 }
 
 /* header section start */
@@ -102,10 +93,11 @@ h2{
 /* grid section begin */
 #grid-container {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    grid-gap: 20px;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    grid-gap: 100px;
     grid-auto-flow: dense;
+    flex-wrap: wrap;
 }
 
 .grid-item {
@@ -119,13 +111,12 @@ h2{
 }
 
 .grid-item:nth-child(3n) {
-    grid-column: span 3;
-    grid-row: span 2;
+    /* grid-column: span 3; */
+    /* grid-row: span 2; */
   }
 
   .box-1 {
-    grid-column: 2 / span 3;
-    grid-row: 2 / span 4;
+    align-self: center;
   }
 /* grid section end */
 
