--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ li a:hover {
 }
 
 .about-section img {
-    width: 20%;
+    width: 15%;
     float: right;
     /* background-size: cover; */
 }
@@ -72,9 +72,19 @@ li a:hover {
 .about-section p {
     display: flex;
     /* padding: 0px; */
-    /* float: left; */
+    /* float
+    +93: left; */
     /* width: 100%; */
-    justify-content: center;
+    /* justify-content: center; */
+}
+
+.about-me-title{
+    float:left
+}
+
+.contact-info{
+    float: left;
+    padding: 0;
 }
 /* end about me section */
 
@@ -83,15 +93,36 @@ li a:hover {
 }
 
 h2{
-    background-color: thistle;
-    text-align: left;
+    border-right: 3px solid;
+    margin: 5px 0px 10px 10px;
+    padding: 5px 10px 10px 10px;
+    /* left: 0; */
+    /* flex: 1 20%; */
     display: flex;
-    justify-content: left;
+    justify-content: flex-end;
     flex-wrap: wrap;
+    background-color: thistle;
+    color: ivory;
+    /* text-align: left; */
+    /* display: flex; */
+    /* justify-content: left; */
+    /* flex-wrap: wrap; */
+}
+
+h2 {
+    /* display: flex; */
+    /* color: ivory; */
+    /* justify-content: flex-start; */
+}
+
+
+.hero-title{
+    text-align: right;
+    background-color: lavenderblush;
 }
 
 /* grid section begin */
-.grid-container {
+.work-grid {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(6, 1fr);
@@ -111,12 +142,8 @@ h2{
 }
 
 .grid-item:nth-child(3n) {
-    grid-column: span 3;
+    grid-column: span 4;
     grid-row: span 2;
-  }
-
-  .box-1 {
-    align-self: center;
   }
 /* grid section end */
 
@@ -131,8 +158,9 @@ h2{
     justify-content: flex-start;
 }
 
-h2 {
+.contact-grid a {
+    color:rgb(45, 49, 40);
     display: flex;
-    color: ivory;
-    justify-content: flex-start;
+    justify-content: center;
+    text-decoration: none;
 }
