changed sizing on header image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
     padding: 20px 35px;
     margin: 7px 0;
     background-image: url('../images/DSC02377.JPG');
-    height: 350px;
+    height: 20rem;
     width: auto;
     background-size: cover;
     background-position: center;
